Revision history for {{$dist->name}}

{{$NEXT}}

1.22      2017-09-08 14:08:59 -0400
  - Support for MSYS2 ($^O eq 'msys')

1.21      2016-03-02 14:20:43 -0500
  - Workaround for nutty cygwin filesystem rules

1.20      2016-03-01 15:06:54 -0500
  - Fix bug where executable named "0" would not be found (gh#7)

1.19      2015-07-21 09:23:54 -0400
  - Relax required Perl back to 5.6.x as this module is upriver to
    a large number of modules
  - No non-core requirements back to 5.6.2

1.18      2015-05-04 15:35:40 -0400
  - Remove prototypes (gh#6)

1.17      2015-05-01 07:06:00 -0400
  - Removed pwhich as forwarned in 1.10
  - Migrated to Dist::Zilla (relevant only for development)
  - Minimum supported Perl is 5.8.1

1.16 Sun 29 Mar 2015
  - Remove use Test::Script from tests that escaped when this requirement
    became optional.

1.15 Sun 29 Mar 2015
  - Fixed small but important POD error

1.14 Sun 29 Mar 2015
  - App::pwhich is no longer bundled with File::Which and included
    in its own distribution.
  - pwhich that comes with this distribution is deprecated, and will
    report a warning if you try to use it, you should insted install
    App::pwhich.
  - pwhich that comes with this distribution will not be installed if
    App::pwhich 1.14 or better is already installed.
  - pwhich will be removed from this distribution, but not before
    30 April 2015.
  - Make Test::Script an optional dependency

1.12 Thu 26 Mar 2015
  - Fixed bug in pwhich introduced in version 1.10 where only the
    first file was searched for

1.11 Thu 26 Mar 2015
  - Support for relative and fully qualified paths in Unix (gh#2)

1.10 Thu 26 Mar 2015
  - Test::Script is now a test instead of runtime requirement
    It will be entirely removed as a prerequisite in a subsequent
    release
  - Will now find .exe and .com files (as it should) on cygwin (rt83146)
  - Declared required Perl version is now 5.005003
  - Updated repository and maintainer information.  Source for this